[package]
name = "img2ascii"
version = "0.1.0"
edition = "2025"
authors = ["final <julyfinal@outlook.com>"]
description = "A tool to convert images to ASCII art"
readme = "README.md"
repository = "https://github.com/yourusername/img2ascii"
license = "MIT"
keywords = ["ascii-art", "image-processing", "cli"]
categories = ["command-line-utilities", "multimedia::images"]

[dependencies]
image = "0.24"
colored = "2.0"
clap = { version = "4.4", features = ["derive"] }
rayon = "1.8"
